[package]
name = "httpserver"
version = "0.1.0"
edition = "2024"

description = "A from-scratch implementation of a HTTP/1.1 server in Rust for learning purposes"
license = "MIT"
repository = "https://github.com/LennartSchlotter/HttpServerRust"
readme = "README.md"
keywords = ["http", "http-server", "http-1.1", "learning", "low-level", "tcp"]
categories = ["web-programming::http-server", "development-tools::learning"]

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["stream", "blocking"] }
sha2 = "0.10.9"
hex = "0.4"
tokio = { version = "1.49", features = ["full", "test-util"] }
futures = "0.3.31"
async-stream = "0.3.6"
bytes = "1.11.1"
tokio-test = "0.4.5"
rustls = "0.23.36"
webpki-roots = "1.0.6"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery =  { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
multiple_crate_versions = "allow" #Unsure
